# troubleshooting-issues

./: .gitignore  README.md
cli-extension/: README.md  setup.cfg
cli-extension/localstack_support/: cli.py  diagnose.py
issue_398/: README.md
issue_398/aws-node-http-api-dynamodb/: Makefile  README.md  package-lock.json  package.json  serverless.yml
issue_398/aws-node-http-api-dynamodb/sslcert/: rootCA.key  rootCA.pem  rootCA.srl  server.crt  ssl.csr  ssl.key
issue_398/aws-node-http-api-dynamodb/todos/: create.js
issue_5406/: README.md  cloudformation-kinesis-api-resources-PER-ENVIRONMENT.yaml  lambda.py  lambda_function.py  run.sh
issue_5498/: README.md  cdk.json  package-lock.json  package.json
issue_5498/lib/: issue_5498-stack.ts
issue_5498/test/: issue_5498.test.ts
issue_5689/: .gitignore  README.md  build.gradle  run.sh  settings.gradle
issue_5689/src/main/java/: SavePostHandler.java
issue_5808/: README.md  docker-compose.yml  samconfig.toml  template.yaml
issue_5808/.aws-sam/: build.toml
issue_5808/functions/hello-world/tests/unit/: test-handler.js
issue_5808/statemachine/: hello_world.asl.json
issue_6705/: authorizer.py  main.tf
issue_6707/: README.md
issue_apigw-subdomain/: .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  serverless.yml
issue_appsync-auth/: test.sh
issue_athena-unnest/: Invoices_1.json  create-table.sql  run.sh  select-data.sql
route53-dns-failover/: README.md  main.tf
