[metadata]
name = localstack-extension-support-cli
version = 0.0.1
description = Simple command line to facilitate LocalStack support tasks

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.1.0.dev

[options.entry_points]
localstack.plugins.cli =
    support-cli = localstack_support.cli:SupportCliPlugin
